# ai-memmail

./: .ai-cred.example  .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: git-vibe.yml
config/: config.example.yaml  live.local.example.yaml
crates/server/: Cargo.toml
crates/server/migrations/: 001_init.sql  002_history_body_threading.sql  003_email_classification_rules.sql  004_default_email_rule_seed_uniqueness.sql  005_sent_thread_context.sql  006_thread_handoffs.sql  007_outbound_html_body.sql  008_portal_conversations.sql
crates/server/src/: ai.rs  ai_external.rs  classification.rs  config.rs  html_sanitizer.rs  lib.rs  logging.rs  mail.rs  mail_external.rs  main.rs  prompts.rs  safety.rs  storage.rs  storage_pg.rs  web.rs  worker.rs
crates/server/src/ai/: payloads.rs  routing.rs  tests.rs
crates/server/src/ai/tests/: chunk_1.rs  chunk_2.rs
crates/server/src/config/: signature.rs  tests.rs
crates/server/src/config/tests/: signature_tests.rs
crates/server/src/mail/: composed.rs  signature.rs  tests.rs  threading.rs
crates/server/src/mail/tests/: composed_tests.rs  coverage_tests.rs  handoff_tests.rs  signature_tests.rs  thread_context_tests.rs
crates/server/src/storage/: memory_store.rs  portal_models.rs  tests.rs  value_helpers.rs
crates/server/src/storage/tests/: chunk_1.rs  chunk_2.rs
crates/server/src/storage_pg/: classification.rs  core.rs  handoff.rs  portal.rs  processing_store.rs  rows.rs  sent_store_impl.rs  tests.rs
crates/server/src/storage_pg/tests/: chunk_1.rs  chunk_2.rs  chunk_3.rs  chunk_4.rs
crates/server/src/web/: handoff.rs  portal.rs
crates/server/src/web/tests/: chunk_1.rs  chunk_2.rs
crates/server/src/worker/: classification.rs  handoff.rs  history.rs  outbound.rs  process.rs  processing.rs  sent_sync.rs  step_timeout.rs  tests.rs  thread_context.rs
crates/server/src/worker/tests/: chunk_1.rs  chunk_2.rs  chunk_3.rs  chunk_4.rs  chunk_5.rs
crates/server/tests/: live_e2e.rs  live_human_reply.rs
crates/server/tests/live_e2e/: handoff.rs
prompts/: email-classifier.md  (+4 more)
(+62 files in other folders)
