[package]
name = "ai-memmail-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
axum = { version = "=0.7.9", features = ["json"] }
imap = "=2.4.1"
indexmap = "=2.7.1"
lettre = { version = "=0.11.10", default-features = false, features = ["builder", "hostname", "native-tls", "pool", "smtp-transport"] }
mailparse = "=0.15.0"
native-tls = "=0.2.12"
openssl = { version = "=0.10.66", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "=0.10.0"
sha2 = "=0.10.9"
thiserror = "1"
tokio = { version = "=1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "=0.7.12", features = ["with-uuid-1"] }
postgres-protocol = "=0.6.8"
tower-http = { version = "=0.6.11", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ureq = { version = "=2.12.1", features = ["json"] }
uuid = { version = "=1.8.0", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "=3.10.1"
tower = "0.5"
